[gd_scene load_steps=2 format=3 uid="uid://tutorial_overlay"]

[ext_resource type="Script" path="res://scripts/ui/tutorial_overlay.gd" id="1_script"]

[node name="TutorialOverlay" type="CanvasLayer"]
layer = 10
script = ExtResource("1_script")

[node name="DimBackground" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.5)

[node name="HintLabel" type="Label" parent="DimBackground"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 200.0
offset_right = 200.0
offset_bottom = 280.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 32
text = "Drag the JOYSTICK to aim"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighlightRing" type="Control" parent="DimBackground"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 0
offset_right = 180.0
offset_bottom = 180.0

[node name="Ring" type="ColorRect" parent="DimBackground/HighlightRing"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.8, 0.2, 0.3)
